--- a/index.html
+++ b/index.html
@@ -8,34 +8,32 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
 
     <script
       src="https://kit.fontawesome.com/a257c94ca1.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@400;500;700;900&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello, world!</h1>
-      <p>Hi there coders</p>
-
-      <i class="fa-brands fa-instagram"></i>
-
+    <div class="hero">
+    <p>🤚 Hi, I am</p>
+    <h1>Kim Carter</h1>
+    <h2 class="mb-3">Front-End Developer based in the United States</h2>
+    <div>
+    <a href="#" class="btn btn-branding">Contact Me</a>
+    </div>
+</div>
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"
-      ></script>
+        crossorigin="anonymous"></script>
     </div>
   </body>
 </html>
