--- a/index.html
+++ b/index.html
@@ -30,7 +30,66 @@
     <a href="#" class="btn btn-branding">Contact Me</a>
     </div>
 </div>
-      <script
+<p class="text-center m-5">
+Featured Project which my best projects be choice 
+to show.
+</p>
+<div class="container">
+  <div class="row mb-5">
+    <div class="col d-none d-lg-block">
+      <img src="images/yogurt.png"
+      class="img-fluid" alt="" />
+    </div>
+    <div class="col-6">
+     <div class="project-description">
+   <h2 class="mb-5">Yogurt Project</h2>
+   <p class="mb-5 text-muted"> 
+   
+    This paragraph is about the love of yogurt.  
+    Yogurt is sweet and and it comes in many flavors.  You can buy in the grocery store or you cn go to yogur shops. 
+     There are many yogurt shops around town.</p>
+
+    <a href="" class="btn btn-branding-outline">Learn More</a>
+   </div>
+ </div>
+</div>
+</div>
+<div class="row mb-5">
+  
+  <div class="col-6">
+   <div class="project-description">
+ <h2 class="mb-5">Weather App</h2>
+ <p class="mb-5 text-muted"> 
+ 
+  This paragraph is about the Weather App.</p>
+
+  <a href="" class="btn btn-branding-outline">Learn More</a>
+ </div>
+</div>
+ <div class="col d-none d-lg-block">
+  <img src="images/weather.png"
+  class="img-fluid" alt="" />
+</div>
+</div>
+
+<div class="row mb-5">
+  <div class="col d-none d-lg-block">
+    <img src="images/Dictionary.png"
+    class="img-fluid" alt="" />
+  </div>
+  <div class="col-6">
+   <div class="project-description">
+ <h2 class="mb-5">Dictionary App</h2>
+ <p class="mb-5 text-muted"> 
+ 
+  This paragraph is about the Dictionary App.</p>
+
+  <a href="" class="btn btn-branding-outline">Learn More</a>
+ </div>
+</div>
+</div>
+
+<script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
