--- a/about.html
+++ b/about.html
@@ -1,23 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous" />
+
+    <script
+      src="https://kit.fontawesome.com/a257c94ca1.js"
+      crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@400;500;700;900&family=Roboto&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
     <div class="about-section container">
         <div class="row">
-            <div class="col-6">
-   <h1 class="mb-5">Hi I am Patricia Pereira</h1>
-   <h2 class="mb-5">Front End Developer Student, based in the United States
+            <div class="col-md-6">
+              <div class="about section-content">
+   <h1 class="mb-4">Hi I am Patricia Pereira</h1>
+   <h2 class="mb-4">Front End Developer Student, based in the United States
    </h2>
-   <p>For anyone who wants to start learning to code, this workshop is very interesting.  You will be challenged with different exercises, and everything is well explained, homework and deadlines are good to keep focus.</p>
-    <a href="">See my projects</a>
-    
+   <p class="mb-4">For anyone who wants to start learning to code, this workshop is very interesting.  You will be challenged with different exercises, and everything is well explained, homework and deadlines are good to keep focus.</p>
+    <a href="" class="btn btn-branding">See my projects</a>
+  </div>
      </div>
-     <div class="col-6">
+     <div class="col-md-6">
    <img src="images/Patricia.png" alt="" 
    class="img-fluid" />
 </div>
