--- a/about.html
+++ b/about.html
@@ -1,28 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Project 4</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous" />
+
+    <script
+      src="https://kit.fontawesome.com/a257c94ca1.js"
+      crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@400;500;700;900&family=Roboto&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-    <div class="about-section container">
-        <div class="row">
-            <div class="col-6">
-   <h1 class="mb-5">Hi I am Patricia Pereira</h1>
-   <h2 class="mb-5">Front End Developer Student, based in the United States
-   </h2>
-   <p>For anyone who wants to start learning to code, this workshop is very interesting.  You will be challenged with different exercises, and everything is well explained, homework and deadlines are good to keep focus.</p>
-    <a href="">See my projects</a>
+    <div class="hero">
+    <p>🤚 Hi, I am</p>
+    <h1>Kim Carter</h1>
     
-     </div>
-     <div class="col-6">
-   <img src="images/Patricia.png" alt="" 
-   class="img-fluid" />
+    <p><a href="about.html">About Page</a></p>
+
+    <h2 class="mb-3">Front-End Developer based in the United States</h2>
+    <div>
+    <a href="#" class="btn btn-branding">Contact Me</a>
+    </div>
+</div>
+<p class="text-center m-5">
+Featured Project which my best projects be choice 
+to show.
+</p>
+<div class="container">
+  <div class="row mb-5">
+    <div class="col d-none d-lg-block">
+      <img src="images/yogurt.png"
+      class="img-fluid" alt="" />
+    </div>
+    <div class="col-6">
+     <div class="project-description">
+   <h2 class="mb-5">Yogurt Project</h2>
+   <p class="mb-5 text-muted"> 
+   
+    This paragraph is about the love of yogurt.  
+    Yogurt is sweet and and it comes in many flavors.  You can buy in the grocery store or you cn go to yogur shops. 
+     There are many yogurt shops around town.</p>
+
+    <a href="" class="btn btn-branding-outline">Learn More</a>
+   </div>
+ </div>
+</div>
+</div>
+<div class="row mb-5">
+  
+  <div class="col-6">
+   <div class="project-description">
+ <h2 class="mb-5">Weather App</h2>
+ <p class="mb-5 text-muted"> 
+ 
+  This paragraph is about the Weather App.</p>
+
+  <a href="" class="btn btn-branding-outline">Learn More</a>
+ </div>
+</div>
+ <div class="col d-none d-lg-block">
+  <img src="images/weather.png"
+  class="img-fluid" alt="" />
 </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<div class="row mb-5">
+  <div class="col d-none d-lg-block">
+    <img src="images/Dictionary.png"
+    class="img-fluid" alt="" />
+  </div>
+  <div class="col-6">
+   <div class="project-description">
+ <h2 class="mb-5">Dictionary App</h2>
+ <p class="mb-5 text-muted"> 
+ 
+  This paragraph is about the Dictionary App.</p>
+
+  <a href="" class="btn btn-branding-outline">Learn More</a>
+ </div>
+</div>
+</div>
+
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    </div>
   </body>
 </html>
