--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div class="hero">
     <p>🤚 Hi, I am</p>
     <h1>Kim Carter</h1>
+    
+    <p><a href="about.html">About Page</a></p>
+
     <h2 class="mb-3">Front-End Developer based in the United States</h2>
     <div>
     <a href="#" class="btn btn-branding">Contact Me</a>
